hamburger menu position corrected on mobile view

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -157,7 +157,7 @@
 .nav__icons {
   flex: 1 1;
   text-align: center;
-  margin: 1rem;
+  /*  margin: 1rem; */
   width: 110px;
   display: flex;
   justify-content: center;
@@ -185,6 +185,12 @@
   box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.4); /* Adjust values as needed */
   font-size: 25px;
   color: var(--color-golden-active);
+}
+
+.nav__icons-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (max-width: 2000px) {
